parser/ini_parser.go
// Code generated from parser/Ini.g4 by ANTLR 4.9. DO NOT EDIT.

package parser // Ini

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'='", "','", "", "'['", "']'",
}
var symbolicNames = []string{
	"", "", "", "SectionHeader", "SectionHeaderStart", "SectionHeaderEnd",
	"BooleanLiteral", "StringLiteral", "IntegerLiteral", "DecimalLiteral",
	"Identifier", "CommentLine", "MultiNewLine", "NewLine", "WS",
}

var ruleNames = []string{
	"main", "section", "sectionHeader", "sectionBody", "valueLine", "variableName",
	"value", "listValue", "basicValue", "commentLine", "boolValue", "stringValue",
	"numberValue", "integerValue", "decimalValue",
}

type IniParser struct {
	*antlr.BaseParser
}

// NewIniParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *IniParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewIniParser(input antlr.TokenStream) *IniParser {
	this := new(IniParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Ini.g4"

	return this
}

// IniParser tokens.
const (
	IniParserEOF                = antlr.TokenEOF
	IniParserT__0               = 1
	IniParserT__1               = 2
	IniParserSectionHeader      = 3
	IniParserSectionHeaderStart = 4
	IniParserSectionHeaderEnd   = 5
	IniParserBooleanLiteral     = 6
	IniParserStringLiteral      = 7
	IniParserIntegerLiteral     = 8
	IniParserDecimalLiteral     = 9
	IniParserIdentifier         = 10
	IniParserCommentLine        = 11
	IniParserMultiNewLine       = 12
	IniParserNewLine            = 13
	IniParserWS                 = 14
)

// IniParser rules.
const (
	IniParserRULE_main          = 0
	IniParserRULE_section       = 1
	IniParserRULE_sectionHeader = 2
	IniParserRULE_sectionBody   = 3
	IniParserRULE_valueLine     = 4
	IniParserRULE_variableName  = 5
	IniParserRULE_value         = 6
	IniParserRULE_listValue     = 7
	IniParserRULE_basicValue    = 8
	IniParserRULE_commentLine   = 9
	IniParserRULE_boolValue     = 10
	IniParserRULE_stringValue   = 11
	IniParserRULE_numberValue   = 12
	IniParserRULE_integerValue  = 13
	IniParserRULE_decimalValue  = 14
)

// IMainContext is an interface to support dynamic dispatch.
type IMainContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMainContext differentiates from other interfaces.
	IsMainContext()
}

type MainContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMainContext() *MainContext {
	var p = new(MainContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IniParserRULE_main
	return p
}

func (*MainContext) IsMainContext() {}

func NewMainContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainContext {
	var p = new(MainContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IniParserRULE_main

	return p
}

func (s *MainContext) GetParser() antlr.Parser { return s.parser }

func (s *MainContext) EOF() antlr.TerminalNode {
	return s.GetToken(IniParserEOF, 0)
}

func (s *MainContext) AllSection() []ISectionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISectionContext)(nil)).Elem())
	var tst = make([]ISectionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISectionContext)
		}
	}

	return tst
}

func (s *MainContext) Section(i int) ISectionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISectionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISectionContext)
}

func (s *MainContext) AllMultiNewLine() []antlr.TerminalNode {
	return s.GetTokens(IniParserMultiNewLine)
}

func (s *MainContext) MultiNewLine(i int) antlr.TerminalNode {
	return s.GetToken(IniParserMultiNewLine, i)
}

func (s *MainContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.EnterMain(s)
	}
}

func (s *MainContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.ExitMain(s)
	}
}

func (p *IniParser) Main() (localctx IMainContext) {
	localctx = NewMainContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, IniParserRULE_main)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(40)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == IniParserSectionHeader {
		{
			p.SetState(30)
			p.Section()
		}
		p.SetState(37)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == IniParserMultiNewLine {
			{
				p.SetState(31)
				p.Match(IniParserMultiNewLine)
			}
			p.SetState(33)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			if _la == IniParserSectionHeader {
				{
					p.SetState(32)
					p.Section()
				}

			}

			p.SetState(39)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}
	{
		p.SetState(42)
		p.Match(IniParserEOF)
	}

	return localctx
}

// ISectionContext is an interface to support dynamic dispatch.
type ISectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSectionContext differentiates from other interfaces.
	IsSectionContext()
}

type SectionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySectionContext() *SectionContext {
	var p = new(SectionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IniParserRULE_section
	return p
}

func (*SectionContext) IsSectionContext() {}

func NewSectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SectionContext {
	var p = new(SectionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IniParserRULE_section

	return p
}

func (s *SectionContext) GetParser() antlr.Parser { return s.parser }

func (s *SectionContext) SectionHeader() ISectionHeaderContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISectionHeaderContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISectionHeaderContext)
}

func (s *SectionContext) SectionBody() ISectionBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISectionBodyContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISectionBodyContext)
}

func (s *SectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.EnterSection(s)
	}
}

func (s *SectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.ExitSection(s)
	}
}

func (p *IniParser) Section() (localctx ISectionContext) {
	localctx = NewSectionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, IniParserRULE_section)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.SectionHeader()
	}
	{
		p.SetState(45)
		p.SectionBody()
	}

	return localctx
}

// ISectionHeaderContext is an interface to support dynamic dispatch.
type ISectionHeaderContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSectionHeaderContext differentiates from other interfaces.
	IsSectionHeaderContext()
}

type SectionHeaderContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySectionHeaderContext() *SectionHeaderContext {
	var p = new(SectionHeaderContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IniParserRULE_sectionHeader
	return p
}

func (*SectionHeaderContext) IsSectionHeaderContext() {}

func NewSectionHeaderContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SectionHeaderContext {
	var p = new(SectionHeaderContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IniParserRULE_sectionHeader

	return p
}

func (s *SectionHeaderContext) GetParser() antlr.Parser { return s.parser }

func (s *SectionHeaderContext) SectionHeader() antlr.TerminalNode {
	return s.GetToken(IniParserSectionHeader, 0)
}

func (s *SectionHeaderContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SectionHeaderContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SectionHeaderContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.EnterSectionHeader(s)
	}
}

func (s *SectionHeaderContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.ExitSectionHeader(s)
	}
}

func (p *IniParser) SectionHeader() (localctx ISectionHeaderContext) {
	localctx = NewSectionHeaderContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, IniParserRULE_sectionHeader)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(47)
		p.Match(IniParserSectionHeader)
	}

	return localctx
}

// ISectionBodyContext is an interface to support dynamic dispatch.
type ISectionBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSectionBodyContext differentiates from other interfaces.
	IsSectionBodyContext()
}

type SectionBodyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySectionBodyContext() *SectionBodyContext {
	var p = new(SectionBodyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IniParserRULE_sectionBody
	return p
}

func (*SectionBodyContext) IsSectionBodyContext() {}

func NewSectionBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SectionBodyContext {
	var p = new(SectionBodyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IniParserRULE_sectionBody

	return p
}

func (s *SectionBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *SectionBodyContext) AllValueLine() []IValueLineContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IValueLineContext)(nil)).Elem())
	var tst = make([]IValueLineContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IValueLineContext)
		}
	}

	return tst
}

func (s *SectionBodyContext) ValueLine(i int) IValueLineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IValueLineContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IValueLineContext)
}

func (s *SectionBodyContext) AllCommentLine() []ICommentLineContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ICommentLineContext)(nil)).Elem())
	var tst = make([]ICommentLineContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ICommentLineContext)
		}
	}

	return tst
}

func (s *SectionBodyContext) CommentLine(i int) ICommentLineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICommentLineContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ICommentLineContext)
}

func (s *SectionBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SectionBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SectionBodyContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.EnterSectionBody(s)
	}
}

func (s *SectionBodyContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.ExitSectionBody(s)
	}
}

func (p *IniParser) SectionBody() (localctx ISectionBodyContext) {
	localctx = NewSectionBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, IniParserRULE_sectionBody)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(53)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			p.SetState(51)
			p.GetErrorHandler().Sync(p)
			switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
			case 1:
				{
					p.SetState(49)
					p.ValueLine()
				}

			case 2:
				{
					p.SetState(50)
					p.CommentLine()
				}

			}

		}
		p.SetState(55)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())
	}

	return localctx
}

// IValueLineContext is an interface to support dynamic dispatch.
type IValueLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsValueLineContext differentiates from other interfaces.
	IsValueLineContext()
}

type ValueLineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValueLineContext() *ValueLineContext {
	var p = new(ValueLineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IniParserRULE_valueLine
	return p
}

func (*ValueLineContext) IsValueLineContext() {}

func NewValueLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValueLineContext {
	var p = new(ValueLineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IniParserRULE_valueLine

	return p
}

func (s *ValueLineContext) GetParser() antlr.Parser { return s.parser }

func (s *ValueLineContext) MultiNewLine() antlr.TerminalNode {
	return s.GetToken(IniParserMultiNewLine, 0)
}

func (s *ValueLineContext) VariableName() IVariableNameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IVariableNameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IVariableNameContext)
}

func (s *ValueLineContext) Value() IValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IValueContext)
}

func (s *ValueLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ValueLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ValueLineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.EnterValueLine(s)
	}
}

func (s *ValueLineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.ExitValueLine(s)
	}
}

func (p *IniParser) ValueLine() (localctx IValueLineContext) {
	localctx = NewValueLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, IniParserRULE_valueLine)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Match(IniParserMultiNewLine)
	}
	{
		p.SetState(57)
		p.VariableName()
	}
	{
		p.SetState(58)
		p.Match(IniParserT__0)
	}
	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<IniParserBooleanLiteral)|(1<<IniParserStringLiteral)|(1<<IniParserIntegerLiteral)|(1<<IniParserDecimalLiteral))) != 0 {
		{
			p.SetState(59)
			p.Value()
		}

	}

	return localctx
}

// IVariableNameContext is an interface to support dynamic dispatch.
type IVariableNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsVariableNameContext differentiates from other interfaces.
	IsVariableNameContext()
}

type VariableNameContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVariableNameContext() *VariableNameContext {
	var p = new(VariableNameContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IniParserRULE_variableName
	return p
}

func (*VariableNameContext) IsVariableNameContext() {}

func NewVariableNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VariableNameContext {
	var p = new(VariableNameContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IniParserRULE_variableName

	return p
}

func (s *VariableNameContext) GetParser() antlr.Parser { return s.parser }

func (s *VariableNameContext) Identifier() antlr.TerminalNode {
	return s.GetToken(IniParserIdentifier, 0)
}

func (s *VariableNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VariableNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VariableNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.EnterVariableName(s)
	}
}

func (s *VariableNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.ExitVariableName(s)
	}
}

func (p *IniParser) VariableName() (localctx IVariableNameContext) {
	localctx = NewVariableNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, IniParserRULE_variableName)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(62)
		p.Match(IniParserIdentifier)
	}

	return localctx
}

// IValueContext is an interface to support dynamic dispatch.
type IValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsValueContext differentiates from other interfaces.
	IsValueContext()
}

type ValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValueContext() *ValueContext {
	var p = new(ValueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IniParserRULE_value
	return p
}

func (*ValueContext) IsValueContext() {}

func NewValueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValueContext {
	var p = new(ValueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IniParserRULE_value

	return p
}

func (s *ValueContext) GetParser() antlr.Parser { return s.parser }

func (s *ValueContext) BasicValue() IBasicValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBasicValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBasicValueContext)
}

func (s *ValueContext) ListValue() IListValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IListValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IListValueContext)
}

func (s *ValueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ValueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ValueContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.EnterValue(s)
	}
}

func (s *ValueContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.ExitValue(s)
	}
}

func (p *IniParser) Value() (localctx IValueContext) {
	localctx = NewValueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, IniParserRULE_value)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(64)
			p.BasicValue()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(65)
			p.ListValue()
		}

	}

	return localctx
}

// IListValueContext is an interface to support dynamic dispatch.
type IListValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsListValueContext differentiates from other interfaces.
	IsListValueContext()
}

type ListValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyListValueContext() *ListValueContext {
	var p = new(ListValueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IniParserRULE_listValue
	return p
}

func (*ListValueContext) IsListValueContext() {}

func NewListValueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ListValueContext {
	var p = new(ListValueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IniParserRULE_listValue

	return p
}

func (s *ListValueContext) GetParser() antlr.Parser { return s.parser }

func (s *ListValueContext) AllBasicValue() []IBasicValueContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IBasicValueContext)(nil)).Elem())
	var tst = make([]IBasicValueContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IBasicValueContext)
		}
	}

	return tst
}

func (s *ListValueContext) BasicValue(i int) IBasicValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBasicValueContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IBasicValueContext)
}

func (s *ListValueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ListValueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ListValueContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.EnterListValue(s)
	}
}

func (s *ListValueContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.ExitListValue(s)
	}
}

func (p *IniParser) ListValue() (localctx IListValueContext) {
	localctx = NewListValueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, IniParserRULE_listValue)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		p.BasicValue()
	}
	p.SetState(71)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == IniParserT__1 {
		{
			p.SetState(69)
			p.Match(IniParserT__1)
		}
		{
			p.SetState(70)
			p.BasicValue()
		}

		p.SetState(73)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IBasicValueContext is an interface to support dynamic dispatch.
type IBasicValueContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBasicValueContext differentiates from other interfaces.
	IsBasicValueContext()
}

type BasicValueContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBasicValueContext() *BasicValueContext {
	var p = new(BasicValueContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = IniParserRULE_basicValue
	return p
}

func (*BasicValueContext) IsBasicValueContext() {}

func NewBasicValueContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BasicValueContext {
	var p = new(BasicValueContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = IniParserRULE_basicValue

	return p
}

func (s *BasicValueContext) GetParser() antlr.Parser { return s.parser }

func (s *BasicValueContext) BoolValue() IBoolValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBoolValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBoolValueContext)
}

func (s *BasicValueContext) StringValue() IStringValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStringValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStringValueContext)
}

func (s *BasicValueContext) NumberValue() INumberValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INumberValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(INumberValueContext)
}

func (s *BasicValueContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BasicValueContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BasicValueContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.EnterBasicValue(s)
	}
}

func (s *BasicValueContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(IniListener); ok {
		listenerT.ExitBasicValue(s)
	}
}

func (p *IniParser) BasicValue() (localctx IBasicValueContext) {
	localctx = NewBasicValueContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 16, IniParserRULE_basicValue)
